--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,15 @@
 @tailwind utilities;
  
 @layer base {
+
+  .no-frame-drag {
+    --wails-draggable:no-drag;
+  }
+
+  .frame-drag {
+    widows: 1
+  }
+
   :root {
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
